# pagelist-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  release.yml  rust.yml  test.yml  toolforge.yml
base/: Cargo.toml
base/src/: bot.rs  ir.rs  lib.rs
parser/: Cargo.toml
parser/src/: ast.rs  convert.rs  error.rs  grammar.lalrpop  grammar.rs  lib.rs  optim.rs
solver/: Cargo.toml
solver/src/: api.rs  lib.rs  util.rs
src/: apidelegate.rs  apiservice.rs  arg.rs  main.rs  output.rs  routine.rs  types.rs
src/parser/: ast.rs  convert.rs  error.rs  grammar.lalrpop  grammar.rs  ir.rs  mod.rs  optim.rs
src/routine/: daemon.rs  mod.rs  output.rs  pagewriter.rs  queryexecutor.rs  task.rs  taskfinder.rs  taskrunner.rs  types.rs
src/solver/: apisolver.rs  def.rs  error.rs  mod.rs  util.rs
