[package]
name = "pagelist-bot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plbot_base = { path = "base", version = "0.0.1" }
plbot_parser = { path = "parser", version = "0.0.1" }
plbot_solver = { path = "solver", version = "0.0.1" }

mediawiki = "^0.2"
tokio = { version = "^1.15", features = [ "time" ] }
tracing = { version = "^0.1" }
tracing-subscriber = { version = "^0.3", features = [ "local-time", "registry" ] }
tracing-appender = "^0.2"
clap = { version = "^3.1", features = [ "cargo" ] }
serde_json = { version = "^1.0" }
md-5 = "^0.10"
hex = "^0.4"
serde = { version = "^1.0", features = [ "derive" ] }
